--- a/content/w10_ssh.html
+++ b/content/w10_ssh.html
@@ -139,7 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> <br /><h1>w10_ssh</h1></div></div></div><br />w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> </div>
+    <div id="tipue_search_content">w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> <br /><h1>w10_ssh</h1>
+<p>w10_ssh</p></div></div></div><br />w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
