--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -441,7 +441,30 @@ var winkVideoData = {
 </div>
 </div>
 <p>--------------------------------------</p>
-<p>組合</p><h1>w10</h1>
+<p>組合</p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/組合.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><h1>w10</h1>
 <p>w10-1 任務執行步驟:</p>
 <ol>
 <li><a href="https://github.com/mdecycu/cd2022_guide/raw/main/downloads/w10_block_ui/w10_block_ui.wnk">下載 w10_block_ui.wnk</a></li>
