--- a/content/w12.html
+++ b/content/w12.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,7 +139,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <a href='w10_ssh.html'>Next</a> >> w10_ssh<br /><h1>w10_nx_integ</h1>
+    <div id="tipue_search_content">w10_ssh << <a href='w10_ssh.html'>Previous</a> <br /><h1>w12</h1>
+<p></p>
+<p>各分組在執行<span> </span><a href="https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html">w8 任務</a>之後, 請回答下列問題:</p>
+<ol>
+<li><a href="https://mde.tw/cd2022_guide/downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a><span> </span>中, 若計入重複引用的零件, 總數有多少? 請列出組成此一 uarm 機械手臂所需的 BOM 列表.</li>
+<li>若不計入重複引用的零件, 總數有多少? 請列出各零件名稱.</li>
+<li>當執行機械手臂的設計過程中, 若已知各零件所擬採用的零件材料密度, 請問此一設計中的 uarm 機械手臂的淨重量為多少? (<a href="http://download.ufactory.cc/docs/en/uArm-Swift-Specifications-171012.pdf">uArm-Swift-Specifications.pdf</a>)</li>
+<li>當執行機械手臂設計與製程規劃時, 若已知各零件擬採行的製造程序、取得方法與所需時間及成本, 請問此一設計中的 uarm 機械手臂, 該如何計算一定數量需求下, 需花費多少時間? 如何計算成本?</li>
+</ol>
+<p>上列事項假如採電腦輔助協同設計流程, 甚至將整體流程採網際整合方式, 該如何進行?</p>
+<p>------------------------------------</p>
+<p></p>
+<p></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -151,7 +163,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="https://40923210.github.io/cd2022/downloads/w10_nx_integ.mp4" type="video/mp4"/></video>
+      <source src="./../downloads/w12-1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -161,8 +173,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<br />w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <a href='w10_ssh.html'>Next</a> >> w10_ssh</div>
+</div></div></div></div></div><br />w10_ssh << <a href='w10_ssh.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
