--- a/content/online.html
+++ b/content/online.html
@@ -139,36 +139,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10_ssh << <a href='w10_ssh.html'>Previous</a> <a href='online.html'>Next</a> >> online<br /><h1>w12</h1>
-<p></p>
-<p>各分組在執行<span> </span><a href="https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html">w8 任務</a>之後, 請回答下列問題:</p>
-<ol>
-<li><a href="https://mde.tw/cd2022_guide/downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a><span> </span>中, 若計入重複引用的零件, 總數有多少? 請列出組成此一 uarm 機械手臂所需的 BOM 列表.</li>
-<li>若不計入重複引用的零件, 總數有多少? 請列出各零件名稱.</li>
-<li>當執行機械手臂的設計過程中, 若已知各零件所擬採用的零件材料密度, 請問此一設計中的 uarm 機械手臂的淨重量為多少? (<a href="http://download.ufactory.cc/docs/en/uArm-Swift-Specifications-171012.pdf">uArm-Swift-Specifications.pdf</a>)</li>
-<li>當執行機械手臂設計與製程規劃時, 若已知各零件擬採行的製造程序、取得方法與所需時間及成本, 請問此一設計中的 uarm 機械手臂, 該如何計算一定數量需求下, 需花費多少時間? 如何計算成本?</li>
-</ol>
-<p>上列事項假如採電腦輔助協同設計流程, 甚至將整體流程採網際整合方式, 該如何進行?</p>
-<p>------------------------------------</p>
-<p></p>
-<p></p>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 20,
-  buttonFrameLength: 10,
-  buttonFrameOffset: 5,
-  frameStops: {
-  },
-};
-</script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="https://40923210.github.io/cd2022/downloads/w12-1.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<br />w10_ssh << <a href='w10_ssh.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
+    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>online</h1>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+</div>
+</div>
+</div>
+</div><br />w12 << <a href='w12.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
