--- a/config/content.htm
+++ b/config/content.htm
@@ -593,14 +593,12 @@ var winkVideoData = {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<h1 class="winkVideoControlBarProgressEmptyMiddleClass">online</h1>
+<h1>online</h1>
 <div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass">NX和CoppeliaSim整合</div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass">以NX繪製MTB機械手臂組立件</div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<div class="winkVideoPlayOverlayClass">
+</div></div></div></div></div></div></div>
