--- a/content/online.html
+++ b/content/online.html
@@ -141,15 +141,13 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>online</h1>
 <div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass">NX和CoppeliaSim整合</div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass">以NX繪製MTB機械手臂組立件</div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div>
-</div>
-</div>
-</div>
-</div><br />w12 << <a href='w12.html'>Previous</a> </div>
+<div class="winkVideoPlayOverlayClass">
+</div></div></div></div></div></div></div><br />w12 << <a href='w12.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
