--- a/config/content.htm
+++ b/config/content.htm
@@ -489,8 +489,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h1>w10</h1>
+</div><h1>w10</h1>
 <p>w10-1 任務執行步驟:</p>
 <ol>
 <li><a href="https://github.com/mdecycu/cd2022_guide/raw/main/downloads/w10_block_ui/w10_block_ui.wnk">下載 w10_block_ui.wnk</a></li>
