--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -416,7 +416,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<h1>w8</h1>
+</div>
+</div><h1>w8</h1>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>繪製零件檔</p>
 <script>
@@ -597,8 +598,6 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>NX及CoppeliaSim整合</p>
-</div>
-</div>
 </div>
 </div>
 </div>
