--- a/content/About.html
+++ b/content/About.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,12 +139,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='w2.html'>Next</a> >> w2<br /><h1>About</h1>
 <p>cmsimde_site</p>
 <p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
 <p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p>
 <p></p>
-<br />First << <a href='First.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<br /> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
